tdf#126686 Chart: fix crash

Regression from commit: fa0a981af41a2606541eec1cb20a379a739691e0
(tdf#114166 DOCX chart import: fix missing complex categories)

Change-Id: I164ed45280fcf7034fa3be82fd80efc4f03e5ed9